--- a/toi/localisation/english/belgium_l_english.yml
+++ b/toi/localisation/english/belgium_l_english.yml
@@ -53,7 +53,7 @@
  BEL_strengthen_austrian_ties: "Stengthen the Austrian Ties"
  BEL_support_european_china: "Support the Europeans in China"
  BEL_buy_british_india: "Buy from British India"
- BEL_demand_tianjin: "Demand Tianjin"
+ BEL_demand_tianjin: "Demand Tientsin"
  BEL_embassy_rio: "Open Embassy in Rio de Janeiro"
  BEL_embassy_saint_petersburg: "Open Embassy in Saint-Petersburg"
  BEL_embassy_stockholm: "Open Embassy in Stockholm"
