--- a/toi/localisation/english/japan_shogunate_l_english.yml
+++ b/toi/localisation/english/japan_shogunate_l_english.yml
@@ -1073,26 +1073,40 @@ l_english:
  JAP_tokugawa_shogunate.181.t: "Japan threatens us with War!"
  JAP_tokugawa_shogunate.181.d: "[JAP.GetNameDef] has threatened war over the island of Tsushima in the ongoing crisis after we have announced our refusal to back down! We could recede at the last moment now, or we could try to enforce our will by way of the sword!"
  JAP_tokugawa_shogunate.181.a: "We will back down then...we can't afford this conflict."
- JAP_tokugawa_shogunate.1711.b: "They can have a war!"
+ JAP_tokugawa_shogunate.181.b: "They can have a war!"
  JAP_tokugawa_shogunate.182.t: "[RUS.GetNameDef] declares war on [JAP.GetNameDef]!"
  JAP_tokugawa_shogunate.182.d: "[RUS.GetNameDef] has declared war on the Japanese over the island of Tsushima, which was the focal point of an ongoing crisis which has now erupted in violence! We have guaranteed the Japanese that we are their backers in this conflict - so we are obliged to come to their aid."
  JAP_tokugawa_shogunate.182.a: "We shall fight them off!"
- JAP_tokugawa_shogunate.1712.b: "We will come to Japans aid!"
+ JAP_tokugawa_shogunate.182.b: "We will come to Japans aid!"
  JAP_tokugawa_shogunate.183.t: "We have lost the war!"
  JAP_tokugawa_shogunate.183.d: "Despite our best efforts, Russia has been defeated in military conflict! The Tsushima crisis is coming to an end - but not the one we hoped for. Let us hope our enemies have mercy on us...and that that reflects in their treaty, which will inevitably be imposed..."
- JAP_tokugawa_shogunate.1713.a: "A terrible humiliation of [RUS.GetNameDef]..."
+ JAP_tokugawa_shogunate.83.a: "A terrible humiliation of [RUS.GetNameDef]..."
  JAP_tokugawa_shogunate.184.t: "Peace Treaty - open our ports to Britain?"
  JAP_tokugawa_shogunate.184.d: "Part of the peace treaty signed over the Tsushima War included a section stating that [JAP.GetNameDef] is to open their ports to [ENG.GetNameDef], but many isolationists in our country oppose this. Should we try to break the treaty, or go along with it?"
  JAP_tokugawa_shogunate.184.a: "Yes, the British deserve an exception."
- JAP_tokugawa_shogunate.1714.b: "No, that can not be allowed."
- JAP_tokugawa_shogunate.1715.t: "[JAP.GetNameDef] breaks the Peace Treaty!"
- JAP_tokugawa_shogunate.1715.d: "The Japanese have violated the peace treaty of the Tsushima War just mere days after it was signed by refusing to let our ships dock in their ports, despite it being clearly stated in the treaty that we should henceforth be allowed to do so! How should we handle this?"
- JAP_tokugawa_shogunate.1715.a: "We have to accept their policy of isolation."
- JAP_tokugawa_shogunate.1715.b: "If they want another war, they can have it!"
+ JAP_tokugawa_shogunate.184.b: "No, that can not be allowed."
+ JAP_tokugawa_shogunate.185.t: "[JAP.GetNameDef] breaks the Peace Treaty!"
+ JAP_tokugawa_shogunate.185.d: "The Japanese have violated the peace treaty of the Tsushima War just mere days after it was signed by refusing to let our ships dock in their ports, despite it being clearly stated in the treaty that we should henceforth be allowed to do so! How should we handle this?"
+ JAP_tokugawa_shogunate.185.a: "We have to accept their policy of isolation."
+ JAP_tokugawa_shogunate.185.b: "If they want another war, they can have it!"
  JAP_tokugawa_shogunate.186.t: "We have won the war!"
  JAP_tokugawa_shogunate.186.d: "[RUS.GetNameDef] celebrates another victory tonight, as the Japanese have announced their surrender over what came to be called the \"Tsushima War\"! We are now free to draft a peace treaty and begin negotiations."
- tsushima.16.a: "A great victory for [RUS.GetNameDef]!"
-
+ JAP_tokugawa_shogunate.186.a: "A great victory for [RUS.GetNameDef]!"
+ JAP_tokugawa_shogunate.187.t: "The Japanese Surrender Tsushima!"
+ JAP_tokugawa_shogunate.187.d: "After negotiations (and apparently also quite a bit of threats from either side) a regional conflict in the far east has been settled when the representatives of the [JAP.GetAdjective] shogunate decided to transfer the island of Tsushima to [RUS.GetNameDef]. "
+ JAP_tokugawa_shogunate.187.a: "A great gain for us!"
+ JAP_tokugawa_shogunate.187.b: "A terrible loss."
+ JAP_tokugawa_shogunate.187.c: "The Russians own the island now..."
+ JAP_tokugawa_shogunate.188.t: "[RUS.GetName] backs down in Tsushima Conflict!"
+ JAP_tokugawa_shogunate.188.d: "A regional conflict in the far east recently came to a close when the [RUS.GetAdjective] decided to back down after Tsushima authorities refused a transfer of the island to [RUS.GetNameDef]. It is presumed that they had been trying to acquire the strategically important naval port in order to strengthen their power in the area."
+ JAP_tokugawa_shogunate.188.a: "We had no other choice!"
+ JAP_tokugawa_shogunate.188.b: "They had to respect our policy of isolation."
+ JAP_tokugawa_shogunate.188.c: "A conflict was successfully avoided."
+ JAP_tokugawa_shogunate.189.t: "War breaks out over Tsushima!"
+ JAP_tokugawa_shogunate.189.d: "[RUS.GetNameDef] and [JAP.GetNameDef] have gone to war over the Island of Tsushima! The Russians had shown interest in it earlier this year already, and breached Japanese policies by sending a ship there - twice. The conflict could not successfully be de-escalated, and now the two nation states are at war with each other! The world watches and waits to see what may come of this..."
+ JAP_tokugawa_shogunate.189.a: "We will show the wretched Japanese!"
+ JAP_tokugawa_shogunate.189.b: "We will show the wretched Russians!"
+ JAP_tokugawa_shogunate.189.c: "A major conflict over that small island?"
 # Victorian Decisions
  # Kokera 1858
   TSH_decision_kokera_edo_festival: "Edo Festival Preparations"
