--- a/toi/localisation/english/portugal_l_english.yml
+++ b/toi/localisation/english/portugal_l_english.yml
@@ -253,11 +253,11 @@
  portugalforeign.5.t: "Ratifying the Portugese-Japanese Treaty"
  portugalforeign.5.d: "Today, the treaty between Portugal and Japan on peace, amity and commerce will be ratified."
  portugalforeign.5.a: "It's time."
- portugalforeign.6.t: "The Treaty of Tianjin - Macau"
+ portugalforeign.6.t: "The Treaty of Tientsin - Macau"
  portugalforeign.6.d: "Macau, our holding in China, has long been difficult to maintain. We have put effort in to develop it, now should we attempt to strengthen our governance there?"
  portugalforeign.6.a: "We must deal with the Macau question."
  portugalforeign.6.b: "We don't care."
- portugalforeign.7.t: "The Treaty of Tianjin - Macau"
+ portugalforeign.7.t: "The Treaty of Tientsin - Macau"
  portugalforeign.7.d: "After the question has recently arisen, it's time to make a decision on Macau."
  portugalforeign.7.a: "Macau is ours."
  portugalforeign.7.b: "They can have it."
