--- a/toi/localisation/english/qing_l_english.yml
+++ b/toi/localisation/english/qing_l_english.yml
@@ -203,7 +203,7 @@ QNG_gxu_beijang_navy: "Funding the Beijang Navy"
 QNG_gxu_overseas_training: "Overseas Training"
 QNG_gxu_study_ENG_navy: "Study the British Navy"
 QNG_gxu_study_FRA_navy: "Study the French Navy"
-QNG_gxu_tianjin_naval_academy: "Found the Tianjin Naval Academy"
+QNG_gxu_tianjin_naval_academy: "Found the Tientsin Naval Academy"
 QNG_gxu_establish_naval_board: "Establish a Naval Board"
 QNG_dealing_mudan_incident: "Dealing with the Mudan Incident"
 QNG_preparing_end_regency: "Preparing to End the Regency"
@@ -356,12 +356,12 @@ QNG_US_Department: "American Department"
 QNG_ever_victorius_army: "Ever Victorius Army Formed"
 TAI_shi_dakai_removed: "Shi Dakai Sidelined"
 TAI_shi_dakai_stays: "Shi Dakai Supported"
-QNG_idea_TAI_tianjing_incident: "Effects of the Tianjing Incident"
+QNG_idea_TAI_tianjing_incident: "Effects of the Tientsing Incident"
 QNG_idea_TAI_shi_dakai: "Shi Dakai's Leadership"
 QNG_idea_TAI_shi_dakai_2: "Shi Dakai's Leadership"
 
 
-tai_vic_tianjing_incident: "Recovering from the Tianjing Incident"
+tai_vic_tianjing_incident: "Recovering from the Tientsing Incident"
 tai_vic_tianjing_incident_desc: ""
 tai_dealing_with_shi_dakai: "Dealing with Shi Dakai"
 tai_march_of_shi: "Shi Dakai's March"
