--- a/toi/localisation/russian/events_l_russian.yml
+++ b/toi/localisation/russian/events_l_russian.yml
@@ -392,21 +392,21 @@
  news.15.t: "Отто фон Бисмарк убит!" #NT!
  news.15.d: "Канцлер [PRS.GetAdjective] Отто фон Бисмарк был подтвержден мертвым после того, как его застрелил нападавший в Баварии вчера. Человек, о котором идет речь, уже арестован, а фон Бисмарк был доставлен в больницу и скончался ночью. Предполагается, что нападение было политически мотивированным, но пока не было получено официальной причины от заключенного преступника. Это был тяжелый удар для правительства [PRS.GetAdjective], но они уже заявили, что постараются быстро оправиться от этого события, оплакав смерть фон Бисмарка и проведя его похороны, которые состоятся завтра в Кенигсберге." #NT!
  news.15.a: "Какое варварство." #NT!
- news.18.t: "Цусима переведена на [RUS.GetNameDef]!" #NT!
- news.18.d: "После переговоров (и, по-видимому, немалого количества угроз с обеих сторон) региональный конфликт на Дальнем Востоке был урегулирован, когда правительство [JAP.GetAdjective] решило передать остров Цусима [RUS.GetNameDef]. Цусима является важной стратегической базой между Желтым и Японским морями, поэтому [RUS.GetAdjective] укрепил свои позиции в этом районе." #NT!
- news.18.a: "Большое приобретение для нас!" #NT!
- news.18.b: "Ужасная потеря." #NT!
- news.18.c: "Теперь остров принадлежит русским..." #NT!
- news.19.t: "[RUS.GetName] отступает в Цусимском конфликте!" #NT!
- news.19.d: "Региональный конфликт на Дальнем Востоке недавно подошел к концу, когда [RUS.GetAdjective] решили отступить после того, как власти Цусимы отказались передать остров [RUS.GetNameDef]. Предполагается, что они пытались заполучить стратегически важный военно-морской порт, чтобы укрепить свою власть в этом районе." #NT!
- news.19.a: "У нас не было другого выбора!" #NT!
- news.19.b: "Им пришлось уважать нашу политику изоляции." #NT!
- news.19.c: "Конфликта удалось избежать." #NT!
- news.20.t: "Из-за Цусимы начинается война!" #NT!
- news.20.d: "[RUS.GetNameDef] и [JAP.GetNameDef] начали войну из-за острова Цусима! Русские уже проявляли к нему интерес в начале этого года и нарушили политику Японии, отправив туда корабль — дважды. Конфликт не удалось успешно деэскалировать, и теперь два национальных государства воюют друг с другом! Мир наблюдает и ждет, что из этого выйдет..." #NT!
- news.20.a: "Мы покажем несчастным японцам!" #NT!
- news.20.b: "Мы покажем несчастным русским!" #NT!
- news.20.c: "Крупный конфликт из-за этого маленького острова?" #NT!
+ JAP_tokugawa_shogunate.187.t: "Цусима переведена на [RUS.GetNameDef]!" #NT!
+ JAP_tokugawa_shogunate.187.d: "После переговоров (и, по-видимому, немалого количества угроз с обеих сторон) региональный конфликт на Дальнем Востоке был урегулирован, когда правительство [JAP.GetAdjective] решило передать остров Цусима [RUS.GetNameDef]. Цусима является важной стратегической базой между Желтым и Японским морями, поэтому [RUS.GetAdjective] укрепил свои позиции в этом районе." #NT!
+ JAP_tokugawa_shogunate.187.a: "Большое приобретение для нас!" #NT!
+ JAP_tokugawa_shogunate.187.b: "Ужасная потеря." #NT!
+ JAP_tokugawa_shogunate.187.c: "Теперь остров принадлежит русским..." #NT!
+ JAP_tokugawa_shogunate.188.t: "[RUS.GetName] отступает в Цусимском конфликте!" #NT!
+ JAP_tokugawa_shogunate.188.d: "Региональный конфликт на Дальнем Востоке недавно подошел к концу, когда [RUS.GetAdjective] решили отступить после того, как власти Цусимы отказались передать остров [RUS.GetNameDef]. Предполагается, что они пытались заполучить стратегически важный военно-морской порт, чтобы укрепить свою власть в этом районе." #NT!
+ JAP_tokugawa_shogunate.188.a: "У нас не было другого выбора!" #NT!
+ JAP_tokugawa_shogunate.188.b: "Им пришлось уважать нашу политику изоляции." #NT!
+ JAP_tokugawa_shogunate.188.c: "Конфликта удалось избежать." #NT!
+ JAP_tokugawa_shogunate.189.t: "Из-за Цусимы начинается война!" #NT!
+ JAP_tokugawa_shogunate.189.d: "[RUS.GetNameDef] и [JAP.GetNameDef] начали войну из-за острова Цусима! Русские уже проявляли к нему интерес в начале этого года и нарушили политику Японии, отправив туда корабль — дважды. Конфликт не удалось успешно деэскалировать, и теперь два национальных государства воюют друг с другом! Мир наблюдает и ждет, что из этого выйдет..." #NT!
+ JAP_tokugawa_shogunate.189.a: "Мы покажем несчастным японцам!" #NT!
+ JAP_tokugawa_shogunate.189.b: "Мы покажем несчастным русским!" #NT!
+ JAP_tokugawa_shogunate.189.c: "Крупный конфликт из-за этого маленького острова?" #NT!
  news.21.t: "Морской договор" #NT!
  news.21.d: "После переговоров, которые длились несколько месяцев и привели к финальной встрече на прошлой неделе, бывшая канадская провинция объединилась с Новой Шотландией и Нью-Брансуиком, образовав то, что теперь известно как [CAN.GetNameDef]. Ожидается, что этот региональный союз усилит экономическую и политическую мощь в регионе и широко рассматривается как выгодный для Канады в целом. [ENG.GetNameDef] пока не сделала официального заявления по договору, но предполагается, что они его одобрят." #NT!
  news.21.a: "Важный шаг к объединению для нас!" #NT!
