--- a/toi/localisation/english/prussia_l_english.yml
+++ b/toi/localisation/english/prussia_l_english.yml
@@ -377,8 +377,8 @@ prussiaforeign.2.t: "The Assassination of Henry Heuksen"
 prussiaforeign.2.d: "Henry Heuksen, a respected Dutch-American interpretator in Japan, is dead. After dinner with Eulenberg, he was ambushed by a group of Japanese Shishi near the Zenpuku Temple in Edo. Heuksen suffered mortal wounds to both sides of his body in the fight. He mounted a horse and galloped about 200 yards to the American Legation, where he was taken inside and treated, but died of his wounds later that night. This will surely have diplomatic impact..."
 prussiaforeign.2.a: "How could this happen?"
 prussiaforeign.3.t: "The Eulenburg Expedition reaches China"
-prussiaforeign.3.d: "After leaving Japan, the Eulenburg expedition sailed west, through the Yellow Sea towards Tianjin. They landed there earlier yesterday, and have already met the Chinese delegation. Time to let the talks begin."
-prussiaforeign.3.a: "Welcome to Tianjin."
+prussiaforeign.3.d: "After leaving Japan, the Eulenburg expedition sailed west, through the Yellow Sea towards Tientsin. They landed there earlier yesterday, and have already met the Chinese delegation. Time to let the talks begin."
+prussiaforeign.3.a: "Welcome to Tientsin."
 prussiaforeign.4.t: "The Eulenburg Expedition reaches Siam"
 prussiaforeign.4.d: "Sailling south in the China Sea and into the Gulf of Thailand, our delegation under Eulenberg has arrived in Siam. They were greeted warmly and are now in the process of negotiating - over a lavish feast, of course."
 prussiaforeign.4.a: "Welcome to Bangkok."
