--- a/toi/localisation/english/usa_l_english.yml
+++ b/toi/localisation/english/usa_l_english.yml
@@ -1580,7 +1580,7 @@
  usa_csa_embassy: "Opened Embassy"
 
  USAPanic_Of_1857: "The Panic of 1857 has occurred!"
- USA_QNG_treaty_of_tianjin: "Treaty of Tianjin"
+ USA_QNG_treaty_of_tianjin: "Treaty of Tientsin"
  USABroken_Eagle: "The Confederacy won the Civil War!"
  USASoaring_Eagle: "The Union won the Civil War!"
  USA_Spirit_American_Civil_War_Avoided: "John Bell has managed to avert a civil war!"
@@ -1837,7 +1837,7 @@
  USA_foreign_policy: "Foreign Policy"
  eoanb_decision_USA_harris_treaty: "Propose the Harris Treaty"
  eoanb_decision_USA_harris_treaty_desc: "Although we had successfully opened up Japan with the Convention of Kanagawa in 1854, the important matter of trading rights still remains to be settled. Instructing our envoy to Japan, Townsend Harris, to sign a new treaty with the Japanese will hopefully allow us to gain access to their ports and ensure the safety of our merchants."
- USA_tianjin_treaty: "The Treaty of Tianjin"
+ USA_tianjin_treaty: "The Treaty of Tientsin"
  USA_tianjin_treaty_desc: "With the conclusion of the 2nd Opium War, China is in a weakened position with the other great western powers. We should ensure our merchants continue to grow their asian trade networks by gaining them a foothold in the Qing Empire."
  USA_american_civil_war_descision: "The American Civil War"
  eoanb_descision_USA_ACW_surrender: "Offer Peace to the Confederacy"
