--- a/toi/localisation/english/decisions_l_english.yml
+++ b/toi/localisation/english/decisions_l_english.yml
@@ -536,16 +536,6 @@
  eoanb_tt_decision_ENG_RAJ_peacekeepers: "§RRevolt Risk§! in §Y[RAJ.GetNameDef]§! will decrease by §G2§! points"
  eoanb_decision_ENG_send_RAJ_peacekeepers: "Send Policing Troops to [RAJ.GetNameDef]"
  eoanb_decision_ENG_send_RAJ_peacekeepers_desc: "The situation in [RAJ.GetNameDef] has become quite unstable, and perhaps it would be wise to send some of our reserve troops over there to police the situation a bit.\n\n§YIt will take the men 10 days to arrive.§!\n\n§YThis decision can be taken at most twice a  year.§!"
- eoanb_tt_decision_ENG_hongkong_troops_sow: "§Y[ENG.GetNameDef]§! will receive §G1§! §YRegiment§! in §YHong Kong§!."
- eoanb_decision_sow_ENG_hongkong_troops: "Raise Troops in Hong Kong"
- eoanb_decision_sow_ENG_hongkong_troops_desc: "We are fighting a war in China, and our bastion Hong Kong must hold!"
- eoanb_flag_QNG_fortified_guangzhou: "China has fortified Guangzhou"
- eoanb_decision_sow_QNG_guangzhou_fort: "Fortify Guangzhou"
- eoanb_decision_sow_QNG_guangzhou_fort_desc: "Some simple barricades and fortifications will help us defend the city of Guangzhou against the British!"
- eoanb_decision_sow_QNG_guangzhou_troops: "Raise Troops in Guangzhou"
- eoanb_decision_sow_QNG_guangzhou_troops_desc: "We will raise troops in Guangzhou to defend it!"
- eoanb_tt_decision_QNG_guangzhou_troops_sow: "§Y[QNG.GetNameDef]§! will receive §G1§! §YRegiment§! in §YGuangzhou§!."
- eoanb_decision_MEX_Intervention: "Successfully Fend off European Invasion"
  eoanb_decision_MEX_Intervention1_desc: "After several years of successfully fending of the European Powers threatening our sovereignty, we should look to negotiate terms for peace!"
  eoanb_decision_MEX_Intervention2_desc: "After several years of unsuccessful invasion of Mexico, we should look to negotiate terms for peace!"
  eoanb_tt_decision_FRA_hongkong_troops_sow: "§Y[ENG.GetNameDef]§! will receive §G1§! §YRegiment§! in §YHong Kong§!."
@@ -557,100 +547,7 @@
  eoanb_decision_sow_ENG_draft_nanjing_treaty: "The Treaty of Nanjing"
  eoanb_decision_sow_ENG_draft_nanjing_treaty_desc: "The Chinese have accepted our ultimatum - we must now ratify a new treaty and make some amendments to the old proposed Treaty of Nanjing."
  eoanb_om_QNG_dislikes_winners: "The Treaty of Nanjing"
- eoanb_om_QNG_dislikes_winners_tianjin: "The Treaty of Tianjin"
- eoanb_category_second_opium_war: "The Second Opium War"
- eoanb_category_second_opium_war_desc: "In 1842, the Treaty of Nanjing, the first of the unequal treaties, granted an indemnity and extraterritoriality to the British, the opening of five treaty ports, and the cession of the island of Hong Kong. After the failure of the treaty, British forces have restarted hostilites, resulting in The Second Opium War."
- eoanb_decision_sow_ENG_assault_canton: "Assault Guangzhou"
- eoanb_decision_sow_ENG_assault_canton_desc: "We will start the assault on Guangzhou!"
- eoanb_tt_decision_ENG_canton_assault_sow: "A border war will break out near §YGuangzhou§!.\n"
- eoanb_tt_decision_ENG_kowloon_assault_sow: "A border war will break out near §YHong Kong§!.\n"
- eoanb_decision_sow_ENG_assault_kowloon: "Retake Kowloon"
- eoanb_decision_sow_ENG_assault_kowloon_desc: "After the Chinese ambush in Hong Kong, we need to desperately retake Kowloon to hold our position."
- eoanb_decision_sow_ENG_assault_taku: "Assault the Taku Forts"
- eoanb_decision_sow_ENG_assault_taku_desc: "We will start the assault on the Taku Forts!"
- eoanb_decision_sow_ENG_assault_taku_2: "Assault the Taku Forts again"
- eoanb_decision_sow_ENG_assault_taku_2_desc: "We will start assaulting the Taku Forts for a second time!"
- eoanb_decision_sow_ENG_assault_taku_3: "Assault the Taku Forts once more"
- eoanb_decision_sow_ENG_assault_taku_3_desc: "We will start assaulting the Taku Forts for a third time!"
- eoanb_decision_sow_ENG_assault_beijing: "March on Peking"
- eoanb_decision_sow_ENG_assault_beijing_desc: "After our victory at the Taku Forts, we must now march to Peking to enforce our will."
- eoanb_decision_sow_ENG_land_at_shanghaifen: "Land in Shanghai-Fen"
- eoanb_decision_sow_ENG_land_at_shanghaifen_desc: "To prepare for the assault on Shanghai, we must land troops in Fen."
- eoanb_decision_sow_ENG_assault_shanghai: "Assault Shanghai"
- eoanb_decision_sow_ENG_assault_shanghai_desc: "After the seizing of the concessions in Shanghai, we must urgently force China to give them back. Assault the city."
- eoanb_decision_sow_ENG_hold_beijing_convention: "Hold the Convention of Peking"
- eoanb_decision_sow_ENG_hold_beijing_convention_desc: "We have demonstrated our power enough to enforce our demands. Let's arrange a convention in Peking."
- eoanb_tt_decision_ENG_sow_peking_treaty: "Every member of the §YWestern Coalition§! will §Greceive§! a §Ymedium§! amount of §YPolitical Power§!\n§Y[QNG.GetNameDef]§! will §Rsuffer§! a §Ylarge§! penalty to §YPolitical Power§! and §YStability§!\n§Y[QNG.GetNameDef]§! will receive a new §Ynational spirit§! and be forced to open up their economy (§YTrade Law§!)"
- eoanb_decision_sow_RUS_peking_treaty_supplement: "Propose a supplement to the Peking Treaty"
- eoanb_decision_sow_RUS_peking_treaty_supplement_desc: "We have long wanted territorial gains in the Manchurian region, the current border with [QNG.GetNameDef]. Now, with them weakened and the Peking Treaty enforced, might be our time to strike. We need to propose amendments to the treaty that see those territorial gains made."
- eoanb_decision_sow_RUS_war_QNG_peking: "Enforce the Peking Treaty Amendments"
- eoanb_decision_sow_RUS_war_QNG_peking_desc: "We will enforce our demands by means of war!"
- eoanb_flag_sow_RUS_QNG_peking_war: "Russia and China are at war over the Treaty of Peking"
- eoanb_tt_decision_ENG_taku_assault_sow: "A border war will break out near §YTientsin§!.\n"
- eoanb_tt_decision_ENG_taku_assault_sow_2: "A border war will break out near §YTientsin§!.\n"
- eoanb_tt_decision_ENG_taku_assault_sow_3: "A border war will break out near §YTientsin§!.\n"
- eoanb_tt_decision_ENG_taku_assault_beijing: "A border war will break out near §YTientsin§!.\n"
- eoanb_tt_decision_ENG_taku_assault_shanghai: "A border war will break out near §YShanghai§!.\n"
- eoanb_decision_sow_ENG_land_at_caofeidian: "Land at Caofeidian"
- eoanb_decision_sow_ENG_land_at_caofeidian_desc: "We will prepare for an assault of the Taku forts near Tianjin by landing at Caofeidian."
- eoanb_decision_sow_ENG_fortify_guangzhou: "Fortify Guangzhou"
- eoanb_decision_sow_ENG_fortify_guangzhou_desc: "We have captured the city of Guangzhou, now we need to fortify it so we do not lose it again."
- eoanb_decision_sow_ENG_fortify_hong_kong: "Fortify Hong Kong"
- eoanb_decision_sow_ENG_fortify_hong_kong_desc: "After our defeat at Guangzhou, the Chinese might assault Hong Kong. We need to fortify it to prepare for that eventuality."
- eoanb_decision_sow_QNG_prepare_hk_siege: "Prepare to siege Hong Kong"
- eoanb_decision_sow_QNG_prepare_hk_siege_desc: "We won against the British at Guangzhou, now the time is ripe to drive them out of china! We will build up infrastructure near Hong Kong in order to prepare for a siege."
- eoanb_decision_sow_QNG_prepare_hk_siege_2: "Conscript Civilian Vessels"
- eoanb_decision_sow_QNG_prepare_hk_siege_2_desc: "We will conscript and refurbish some civilian vessels to assist us in the siege."
- eoanb_decision_sow_QNG_prepare_hk_siege_3: "Every able Man"
- eoanb_decision_sow_QNG_prepare_hk_siege_3_desc: "Civilian conscription in the region will ensure we have enough men for the assault."
- eoanb_tt_decision_sow_join_western_coalition: "We will send an envoy to Hong Kong, after which we will be able to intervene more actively in the Second Opium War"
- eoanb_decision_sow_join_western_coalition: "Send Envoy to Hong Kong"
- eoanb_decision_sow_join_western_coalition_desc: "We will send an envoy to Hong Kong in an effort to negotiate with Britain about our involvement in the Second Opium War."
- eoanb_flag_sent_hk_envoy: "Sent an envoy to Hong Kong"
- eoanb_decision_sow_support_ENG: "Send Support to Britain"
- eoanb_decision_sow_support_ENG_desc: "We will send military support to Britain in the Second Opium War."
- eoanb_decision_sow_join_western_coalition_actually: "Request to join the Coalition"
- eoanb_decision_sow_join_western_coalition_actually_desc: "We will ask the British whether we can officially join the Western Coalition."
- eoanb_decision_sow_RUS_draft_aigun_treaty: "The Treaty of Aigun"
- eoanb_decision_sow_RUS_draft_aigun_treaty_desc: "We will deliver some demands to [QNG.GetNameDef]."
- eoanb_decision_sow_RUS_war_QNG_aigun: "Enforce the Treaty of Aigun"
- eoanb_decision_sow_RUS_war_QNG_aigun_desc: "We will enforce our demands by means of war!"
- eoanb_flag_sow_RUS_QNG_aigun_war: "Russia and China are at war over the Treaty of Aigun"
- eoanb_decision_sow_QNG_strengthen_coastline: "Strengthen Tianjin"
- eoanb_decision_sow_QNG_strengthen_coastline_desc: "We must prepare ourselves for a second British assault!"
- eoanb_decision_sow_QNG_seize_shanghai_concessions: "Seize the Shanghai Concessions"
- eoanb_decision_sow_QNG_seize_shanghai_concessions_desc: "We were forced to make concessions to the Western powers in the form of land in Shanghai. After our recent victory, it's time to reverse that."
- eoanb_flag_sow_QNG_seized_shanghai_concessions: "China seized the Shanghai Concessions"
- eoanb_decision_sow_USA_shanghai_warships: "Threaten [QNG.GetNameDef] with Warships"
- eoanb_decision_sow_USA_shanghai_warships_desc: "Our warships have sailed to Shanghai. It is time to enforce our demands."
- eoanb_flag_QNG_prepared_hk_siege_1: "Chinese Hong Kong Siege Preparations Stage One"
- eoanb_flag_QNG_prepared_hk_siege_2: "Chinese Hong Kong Siege Preparations Stage Two"
- eoanb_flag_QNG_prepared_hk_siege_3: "Chinese Hong Kong Siege Preparations Stage Three"
- eoanb_decision_sow_QNG_refurbish_kowloon_naval_fort: "Refurbish the Kowloon Naval Fort"
- eoanb_decision_sow_QNG_refurbish_kowloon_naval_fort_desc: "The old Kowloon Naval Fort, if repaired, could be of great help during the planned siege of Hong Kong."
- eoanb_decision_sow_QNG_develop_tc: "Develop Tung Chung"
- eoanb_decision_sow_QNG_develop_tc_desc: "We will develop the Tung Chung city quarter on our side of land near Hong Kong to improve our chances of winning the siege."
- eoanb_tt_decision_QNG_strengthen_tianjin_troops: "Strengthen the Tianjin Garrison"
- eoanb_decision_sow_QNG_strenghten_tianjin_troops: "We expect that the British will next attack us at Tianjin. We should improve the garrison over there."
- eoanb_decision_sow_QNG_strenghten_tianjin_troops_desc: "§Y[QNG.GetNameDef]§! will receive §G2§! §YRegiments§! in §YTianjin§!."
- eoanb_decision_sow_ENG_draft_tianjin_treaty: "The Treaty of Tianjin"
- eoanb_decision_sow_ENG_draft_tianjin_treaty_desc: "After our victories in Guangzhou and Tianjin, we are ready to draft a treaty for China."
- eoanb_decision_sow_QNG_relieve_tianjin_garrison: "Relieve the Tientsin Garrison"
- eoanb_decision_sow_QNG_relieve_tianjin_garrison_desc: "After the second battle of the Taku Forts, our garrison in Tientsin is badly beaten. We need to relieve the soldiers to ensure stability in the city."
- eoanb_decision_sow_QNG_strengthen_beijing: "Bolster Peking's Defenses"
- eoanb_decision_sow_QNG_strengthen_beijing_desc: "After our defeat at the Taku Forts, it is likely the Western Coalition will march on Beijing. We must fortify it for that eventuality."
- eoanb_decision_sow_QNG_strengthen_beijing_2: "Reinforce the northern Capital"
- eoanb_decision_sow_QNG_strengthen_beijing_2_desc: "After our defeat at Shanghai, it is likely Beijing will be next. We must fortify it."
- eoanb_decision_sow_ENG_mass_in_shanghai: "Mass troops in Shanghai"
- eoanb_decision_sow_ENG_mass_in_shanghai_desc: "After our recent victory at Shanghai, we need to mass troops there so we can attempt to take the Taku Forts for a second time."
- eoanb_tt_decision_ENG_mass_shanghai: "We will be able to attack the Taku Forts again."
- eoanb_flag_ENG_taku_shanghai_assault: "Britain can assault Taku Forts after Shanghai Battle"
- eoanb_decision_sow_QNG_counterattack_coalition: "Counterattack the coalition"
- eoanb_decision_sow_QNG_counterattack_coalition_desc: "After we defeated the Western coalition at Shanghai, we must decide how to retaliate - potentially in Shanghai and potentially in Hong Kong."
- eoanb_tt_decision_QNG_counterattack_coalition: "We will be able to lay siege to §YHong Kong§!."
- eoanb_flag_sow_QNG_counterattack_hk: "China is ready for the Attack on Hong Kong"
- eoanb_decision_sow_QNG_hk_battle_1: "Assault Hong Kong"
- eoanb_decision_sow_QNG_hk_battle_1_desc: "We are ready to assault Hong Kong and drive out the British."
+ eoanb_om_QNG_dislikes_winners_tianjin: "The Treaty of Tientsin"
  eoanb_decision_open_help: "Open Help Menu"
  eoanb_decision_open_help_desc: "This decision opens the §Yhelp menu§!."
  eoanb_category_sepoy_rebellion: "The Sepoy Rebellion"
