--- a/toi/localisation/english/spain_l_english.yml
+++ b/toi/localisation/english/spain_l_english.yml
@@ -72,6 +72,8 @@ spain.22.a: "Send a Representive"
 
 spain.32.t: "Arrival of the Royal Commissary"
 
+spain.84.t: "Prado Declares war on Spain"
+
 spain_hispaniola.1.t: "The administration of La Hispaniola"
 spain_hispaniola.1.d: "Following the recent annexation of the Dominican Republic to Spain, we have encountered a political dilemma. Although the administrations of La Hispaniola continue to bear a striking resemblance to our Caribbean administrations, they are not completely identical and have undergone slight changes during their years of independence. Furthermore, these administrations are strongly dominated by the local Creole aristocracy, which hinders our influence in the territory. We could respect these institutions and the local upper class without disturbing the status quo too much or we could take advantage of the similarity between administrations to easily remodel the entire structure and ensure the dominance of the Spanish state."
 spain_hispaniola.1.a: "They need the Caribbean administration."
