few more tech icons

--- a/toi/localisation/english/_eoanbr_technologies_l_english.yml
+++ b/toi/localisation/english/_eoanbr_technologies_l_english.yml
@@ -1181,6 +1181,8 @@
    tech_uniform_equipment_3_desc: "An evolved and upgraded set of military attire, weaponry, and equipment designed to suit the requirements of mid-19th-century soldiers, showcasing the ongoing development in military technology and logistics."
    tech_uniform_equipment_4: "1864 Uniforms"
    tech_uniform_equipment_4_desc: "The state-of-the-art military gear and accouterments meticulously designed and issued to soldiers during the mid-1860s, reflecting the advancements in weaponry, tactics, and logistics during this pivotal era of warfare."
+   tech_uniform_durable_cloth: "Durable Cloth"
+   tech_uniform_durable_cloth_desc: ""
    tech_uniform_equipment_5: "1872 Uniforms"
    tech_uniform_equipment_5_desc: "The cutting-edge ensemble of military clothing, gear, and arms standardised and adopted in the year 1872, representing a period of technological and tactical advancements in armed forces across various nations."
    tech_uniform_equipment_6: "1878 Uniforms"
@@ -1195,6 +1197,8 @@
    tech_uniform_equipment_10_desc: "The updated and specialized military attire, gear, and arms introduced during the year 1915, showcasing the adaptations and innovations made to meet the challenges of trench warfare and the demands of World War I."
    tech_uniform_equipment_11: "1919 Uniforms"
    tech_uniform_equipment_11_desc: ""
+   tech_uniform_durable_cloth_2: "Improved Durable Cloth"
+   tech_uniform_durable_cloth_2_desc: ""
    tech_uniform_equipment_12: "1936 Uniforms"
    tech_uniform_equipment_12_desc: ""
    tech_uniform_equipment_13: "1939 Uniforms"
