--- a/toi/localisation/english/eoanbr/equipment_l_english.yml
+++ b/toi/localisation/english/eoanbr/equipment_l_english.yml
@@ -494,7 +494,7 @@
   infantry_equipment_shotgun_1_desc: "An improved version based off an old shotgun model, providing more stopping power and further improving accuracy."
   infantry_equipment_early_mg: "Rotary Guns"
   infantry_equipment_early_mg_desc: "Rotary Guns are quick reloading guns, very efficient for suppression and against infantry."
-  
+
   DEN_early_machine_gun_equipment_0: "Espingoles"
   CSA_early_machine_gun_equipment_0: "Gorgas Gun"
   SWE_early_machine_gun_equipment_1: "Kjellman"
@@ -541,7 +541,7 @@
 infantry_equipment_mg_9: "XM-250"
   infantry_equipment_mg_9_desc: ""
 #Infantry Equipment
- #Clothes 
+ #Clothes
   #Uniforms
    uniform_equipment_0: "Medieval Armor"
    uniform_equipment_0_desc: "An ingenious combination of metal plates, chainmail, and leather meticulously crafted to protect knights and warriors during the Middle Ages, offering both defense and status on the medieval battlefield."
@@ -627,7 +627,7 @@ infantry_equipment_mg_9: "XM-250"
  #
 #
 #Heavy Weapons
- 
+
  field_artillery_equipment: "Field Gun Equipment"
  field_artillery_equipment_desc: ""
  field_artillery_equipment_0: "1500 Cannon"
@@ -828,6 +828,8 @@ infantry_equipment_mg_9: "XM-250"
 infantry_equipment_rifle_0: "Percussion Musket"
  infantry_equipment_rifle_0_desc: "Percussion Musket are more accurate and have a longer range than previous iterations of muskets."
  machine_gun_equipment: "Machine Guns"
+ early_machine_gun_equipment_1: "Mitrailleuse"
+ early_machine_gun_equipment_1_desc: ""
 #  field_artillery_equipment: "Cannons"
 #  field_artillery_equipment_desc: "Cannons."
 #  field_artillery_equipment_0: "Bore Gun"
@@ -1021,7 +1023,7 @@ infantry_equipment_rifle_0: "Percussion Musket"
  FRA_light_tank_equipment_4_short: "AMX-13"
  FRA_light_tank_equipment_4_desc: ""
  FRA_light_tank_equipment_5: "Char de 25 Tonnes Batignolles-Chatillon"
- FRA_light_tank_equipment_5_short: "Char 25 Tonnes" 
+ FRA_light_tank_equipment_5_short: "Char 25 Tonnes"
  FRA_gw_tank_equipment: "Schneider CA1"
  FRA_gw_tank_equipment_short: "Schneider CA1"
  FRA_iw_tank_equipment: "Renault FT Canon"
@@ -1068,7 +1070,7 @@ infantry_equipment_rifle_0: "Percussion Musket"
  LVN_infantry_equipment_rifle_0_short: "Gewehr M/1798"
  #MCK
  MCK_infantry_equipment_rifle_0: "Lütticher Gewehr M/1813"
- MCK_infantry_equipment_rifle_0_short: "Gewehr M/1813" 
+ MCK_infantry_equipment_rifle_0_short: "Gewehr M/1813"
  #NAS
  NAS_infantry_equipment_rifle_0: "Modèle 1777 corrigé en l'an IX"
  NAS_infantry_equipment_rifle_0_short: "Modèle 1777 corrigé"
